--- a/Analise.rmd
+++ b/Analise.rmd
@@ -166,6 +166,73 @@ df = as.data.frame(clinical.PRAD$clinical_patient_PRAD)
 View(df)
 ```
 
+dados_sample <- read.delim("x/x/x/data_clinical_sample.txt", header = TRUE, stringsAsFactors = FALSE)
+dados_patient <- read.delim("x/x/x/data_clinical_patient.txt", header = TRUE, stringsAsFactors = FALSE)
+
+dados_sample_limpo <- dados_sample[-c(1:4), ]
+dados_patient_limpo <- dados_patient[-c(1:4), ]
+
+head(dados_sample_limpo)
+str(dados_sample_limpo)
+summary(dados_sample_limpo)
+describe(dados_sample_limpo)
+
+#Nao sei se e preciso fazer isto
+#missing_values <- sapply(dados_sample_limpo, function(x) sum(is.na(x)))
+#print(missing_values[missing_values > 0])
+#dados_sample_limpo$Neoplasm.Histologic.Grade[is.na(dados_sample_limpo$Neoplasm.Histologic.Grade)] <- 0
+#dados_sample_limpo$Tissue.Prospective.Collection.Indicator[is.na(dados_sample_limpo$Tissue.Prospective.Collection.Indicator)] <- 0
+#dados_sample_limpo$Tissue.Retrospective.Collection.Indicator[is.na(dados_sample_limpo$Tissue.Retrospective.Collection.Indicator)] <- 0
+
+head(dados_patient_limpo)
+str(dados_patient_limpo)
+summary(dados_patient_limpo)
+describe(dados_patient_limpo)
+
+#Eu fiz vários codigos que comparam varios fatores mas não sei se mete-se os codigos com os gráficos ou se mete-se só os gráficos e aonde por estas informações
+
+ggplot(dados_sample_limpo, aes(x = MSI.MANTIS.Score, y = TMB..nonsynonymous.)) +
+  geom_point() +
+  labs(title = "Relação entre MSI e TMB", x = "Score MSI", y = "Score TMB")
+
+
+ggplot(dados_patient_limpo, aes(x = TCGA.PanCanAtlas.Cancer.Type.Acronym, y = Diagnosis.Age)) +
+  geom_boxplot() +
+  labs(title = "Distribuição da Idade de Diagnóstico pelo câncro", x = "Câncro", y = "Idade de Diagnóstico")
+
+ggplot(dados_patient_limpo, aes(x = Overall.Survival..Months., y = Months.of.disease.specific.survival)) +
+  geom_point() +
+  labs(title = "Sobrevivência Geral vs. Sobrevivência Específica da Doença",
+       x = "Sobrevivência Geral (Meses)",
+       y = "Sobrevivência Específica da Doença (Meses)")
+
+ggplot(dados_patient_limpo, aes(x = Diagnosis.Age, y = Overall.Survival..Months.)) +
+  geom_point() +
+  labs(title = "Idade do Diagnóstico vs. Sobrevivência Geral",
+       x = "Idade do Diagnóstico",
+       y = "Sobrevivência Geral (Meses)")
+
+ggplot(dados_patient_limpo, aes(x = Radiation.Therapy, y = Overall.Survival..Months., fill = Radiation.Therapy)) +
+  geom_boxplot() +
+  labs(title = "Sobrevivência Geral com e sem Terapia de Radiação",
+       x = "Terapia de Radiação",
+       y = "Sobrevivência Geral (Meses)",
+       fill = "Terapia de Radiação")
+
+ggplot(dados_patient_limpo, aes(x = Race.Category, fill = Overall.Survival.Status)) +
+  geom_bar(position = "dodge") +
+  labs(title = "Distribuição do Status de Sobrevivência Geral por Raça",
+       x = "Raça",
+       fill = "Status de Sobrevivência Geral",
+       y = "Número de Pacientes")
+
+ggplot(dados_patient_limpo, aes(x = Race.Category, fill = Disease.Free.Status)) +
+  geom_bar(position = "dodge") +
+  labs(title = "Distribuição do Status de Doença Livre por Raça",
+       x = "Raça",
+       y = "Contagem",
+       fill = "Status de Doença Livre")
+
 
 Todos os ficheiros a ser analisados têm em comum um "patient_ID", sendo que o ficheiro "data_clinical_patient" possui metadados relativos aos pacientes, o ficheiro "data_clinical_sample" possui metadados relativos à amostra e o ficheiro "data_mrna_seq_v2_rsem_zscores_ref_all_samples" possui dados normalizados relativos ao sequenciamento de mRNA. Outros ficheiros estão ao nosso dispor para complementar a nossa análise caso seja necessário numa fase posterior.
 
