--- a/Analise.rmd
+++ b/Analise.rmd
@@ -295,6 +295,20 @@ correlation_test3 <- cor.test(dados_patient_limpo$Diagnosis.Age, dados_patient_l
 #Exibir o resultado do teste
 print(correlation_test3)
 
+
+
+# Carregar os dados
+data <- dados_patient_limpo
+
+# Ajustar o modelo de regressão linear
+modelo <- lm(Diagnosis.Age ~ Overall.Survival..Months., data)
+
+# Criar o gráfico de dispersão com a linha de regressão
+plot(data$Overall.Survival..Months., data$Diagnosis.Age, 
+     main = "Gráfico de Regressão", xlab = "Sobrevivência Global (Meses)", ylab = "Idade do Diagnóstico")
+abline(modelo, col = "red")
+
+
 Todos os ficheiros a ser analisados têm em comum um "patient_ID", sendo que o ficheiro "data_clinical_patient" possui metadados relativos aos pacientes, o ficheiro "data_clinical_sample" possui metadados relativos à amostra e o ficheiro "data_mrna_seq_v2_rsem_zscores_ref_all_samples" possui dados normalizados relativos ao sequenciamento de mRNA. Outros ficheiros estão ao nosso dispor para complementar a nossa análise caso seja necessário numa fase posterior.
 
 # Bibliografia
