--- a/Analise.rmd
+++ b/Analise.rmd
@@ -11,9 +11,9 @@ output:
   }
 </style>
 
-# 1ª Parte- Exploração inicial dos dados e análise de expressão diferencial e de enriquecimento
+# Exploração inicial dos dados e análise de expressão diferencial e de enriquecimento
 
-```{r,echo=FALSE,results='hide', warning = FALSE, message=FALSE, warning = FALSE, message=FALSE}
+```{r,echo=FALSE,results='hide', warning=FALSE, message=FALSE}
 #install.packages("jpeg")
 #install.packages("TCGAbiolinks")
 #install.packages("Biobase")
@@ -33,7 +33,6 @@ output:
 
 ```{r,echo=FALSE,results='hide', warning = FALSE, message=FALSE,warning = FALSE, message=FALSE}
 #library("jpeg")
-#library("TCGAbiolinks")
 #library("DESeq2")
 #library("Biobase")
 #library("DESeq2")
@@ -54,47 +53,43 @@ output:
 
 ```
 
-## Introdução - explicação teorica cancro da prostata, expressão genetica e RNAseq? (afunilem a informação à medida que escrevem uma introdução...)
-O cancro da próstata é um tipo comum de cancro que afeta pessoas do sexo masculino, afetando a glândula da próstata, provocando dificuldades urinárias.
-O diagnóstico envolve exames de PSA, e biópsia da próstata, e o seu tratamento pode incluir cirurgia, radioterapia, terapia hormonal ou quimioterapia.
-O Adenocarcinoma é o cancro da prostata mais comum, surgindo nas células glandulares da mesma, este cancro diagnosticado numa fase inicial tem uma taxa de sobrevivência de 98% enquanto que diagnosticado numa fase avançada a taxa de sobrevivência é de apenas 30%.
+## Introdução
+O cancro da próstata é um tipo comum de cancro que afeta pessoas do sexo masculino, incidindo sobre a glândula da próstata e provocando dificuldades urinárias. O diagnóstico envolve exames de PSA e biópsia da próstata. O tratamento pode incluir cirurgia, radioterapia, terapia hormonal ou quimioterapia. O adenocarcinoma é o tipo mais comum de cancro da próstata, originando-se nas células glandulares. Quando diagnosticado numa fase inicial, apresenta uma taxa de sobrevivência de 98%, contrastando com apenas 30% numa fase avançada.
 
-
-```{r,echo=FALSE,results= 'markup', fig.cap= "Fig 1- Exemplo de figura",fig.align='center'}
-image=readJPEG("nomedapic.jpg")
-
-plot(0, 0, type = "n", xlim = c(0, 1), ylim = c(0, 1), xlab = "", ylab = "", axes= FALSE)
-rasterImage(image, 0, 0, 1, 1)
-```
-## Origem dos dados aqui -
-
-#Os dados que vão ser analisados neste trabalho provêm do projeto Pan-Cancer Atlas (TCGA), este projeto foi uma colaboração em larga escala de diversos investigadores de todo o mundo apoiado pelo National Cancer Institute (NCI) e pelo National Human Genome Research Institute (NHGRI).
-#Neste trabalho serão analisadas 494 amostras obtidas através do perfil molecular de mais de 11.000 tumores de 33 diferentes tipos de cancro, as obtenções destes dados foram realizadas através da utilização de diversas técnicas que permitiram examinar as alterações moleculares em diferentes níveis, quer no DNA, RNA, na proteína e na epigenética.
-#A relevância desses dados consiste na compreensão da origem, de onde, e de como os tumores se desenvolvem em humanos, a análise dos perfis moleculares de diferentes tipos de cancro terá como objetivo identificar padrões comuns, diferenças e temas emergentes entre eles, estes dados serão fundamentais para o desenvolvimento de tratamentos mais eficazes e personalizados ,para além disso, os dados servem como uma importante referência para futuras pesquisas sobre o cancro, fornecendo uma base sólida para futuros estudos e análises.
+## Origem dos dados
+Os dados analisados neste trabalho provêm do projeto Pan-Cancer Atlas (TCGA), uma colaboração em larga escala apoiada pelo National Cancer Institute (NCI) e pelo National Human Genome Research Institute (NHGRI). Serão analisadas 494 amostras de mais de 11.000 tumores de 33 tipos diferentes de cancro, obtidas através de diversas técnicas que examinam alterações moleculares a vários níveis, incluindo DNA, RNA, proteínas e epigenética. A análise destes perfis moleculares visa identificar padrões comuns, diferenças e temas emergentes entre os diferentes tipos de cancro, contribuindo para o desenvolvimento de tratamentos mais eficazes e personalizados.
 
 ## Extração dos dados de transcriptómica e respetivos metadados da base de dados
 
-Com o objetivo de analisar dados de transcriptómica relativos ao Adenocarcinoma do cancro da próstata, procedeu-se à extração de informação disponível no website cBioPortal. Este portal disponibiliza, de forma gratuita, uma ampla diversidade de alterações genómicas de vários tipos de cancro, incluindo o selecionado para estudo. Recorreu-se ao pacote TCGAbiolinks, dado que este método permite aceder aos dados do The Genomic Data Commons (GDC), uma rede de conhecimento sobre cancro que suporta a alojamento, normalização e análise de dados genómicos, clínicos e de biosspecimens provenientes de programas de investigação sobre cancro. A utilização do cBioPortal através do TCGAbiolinks possibilita a realização de consultas à base de dados, filtrando e selecionando conjuntos de dados específicos para, subsequentemente, proceder ao seu download.
+Para analisar dados de transcriptómica do adenocarcinoma da próstata, foi extraída informação do cBioPortal usando o pacote TCGAbiolinks. Este método permite aceder aos dados do The Genomic Data Commons (GDC), suportando a análise de dados genómicos, clínicos e de biospecimens de programas de investigação sobre cancro.
 
 ```{r,results= 'markup'}
-query_PRAD = GDCquery(
+library(TCGAbiolinks)
+query_PRAD <- GDCquery(
   project = "TCGA-PRAD",
   data.category = "Transcriptome Profiling", 
   data.type = "Gene Expression Quantification",
-  workflow.type = "STAR - Counts"
+  workflow.type = "HTSeq - Counts"
 )
 
+GDCdownload(query = query_PRAD)
 
-GDCdownload(query=query_PRAD)
+rna_seq_PRAD <- GDCprepare(query = query_PRAD, save = TRUE, save.filename = "mRNA_TCGA-PRAD.rda") 
+```
+```{r, data_verify}
+# Verificação dos dados
+class(rna_seq_PRAD)
+dim(rna_seq_PRAD)
 
-
-rna_seq_PRAD = GDCprepare(query = query, save = TRUE, save.filename = "mRNA_TCGA-PRAD.rda")
+# Exibir os primeiros registros de metadados
+head(colData(rna_seq_PRAD))
 ```
 
 A função GDCquery() é utilizada para realizar a query à base dados. Nesta função são definidos vários parâmetros que permitem filtrar o data set que posteriormente vai ser descarregado. O parâmetro "project" corresponde ao id atribuído ao tipo de cancro de modo a apenas considerar a informação disponível referente ao carcinoma endométrio do corpo uterino. A "data.category" é usado para especificar a categoria de dados que se pretende selecionar, neste caso, como pretendemos realizar a análise da transcriptómica selecionou-se a categoria "Transcriptome Profiling" para selecionar os dados relacionados com o perfil de expressão de genes. De entre os dados do perfil de expressão de genes restringiu-se apenas aos dados referentes à quantificação da expressão de genes definindo "data.type" como Gene expression quantification. Por fim, indicou-se o tipo de análise da expressão genética desejada, optando-se por recorrer ao START-Counts. Este workflow indica que o algoritmo utilizado para a contagem da expressão genética a partir do alinhamento das sequências foi realizada com a ferramenta STAR.
 
 A função GDCdownload() é utilizada para realizar o download dos dados consoante a query realizada e estabelecida na função anterior
 
+```{r, GDC}
 #retorna a classe do objeto (tipo de dados ou a estrutura de dados que o objeto 
 #representa, o que por sua vez determina quais funções podem ser aplicadas a ele)
 class(rna_seq_PRAD)
@@ -105,7 +100,6 @@ dim(rna_seq_PRAD)
 rna_seq_PRAD$paper_BCR
 rna_seq_PRAD$paper_Gender
 rna_seq_PRAD$paper_Grade
-rna_seq_PRAD$paper_IDH.status
 
 #atribui a um novo objeto chamado meta_PRAD, os metadados associados ao conjunto 
 #de dados rna_seq_PRAD
@@ -115,201 +109,131 @@ dim(meta_PRAD)
 #extrair componentes de um objeto por nome (através de colunas)
 meta_PRAD$patient
 meta_PRAD$paper_IDH.status
+```
 
+## Análise de Expressão Diferencial com DESeq2
+A análise de expressão diferencial é crucial para entender as mudanças na expressão gênica entre diferentes condições ou tratamentos. O pacote DESeq2 é amplamente utilizado para esta análise em dados de contagem de sequenciamento de RNA.
 
-##################################
+```{r, deseq2}
+# Preparação dos dados para DESeq2
+library(DESeq2)
+data_de <- rna_seq_PRAD # Assumindo que 'rna_seq_PRAD' já é um objeto apropriado
 
-
-#Análise de Expressão Diferencial com DESeq2
-library(DESeq2)  #Nota: pacote DESeq2, uma ferramenta para análise de expressão diferencial de dados de contagem de sequenciamento de RNA (RNA-Seq)
-
-#Filtra os dados de RNA para incluir apenas amostras não nulo
-data_de <- rna_seq_PRAD[,!is.na(rna_seq_PRAD$paper_IDH.status)]
-
-#Cria um objeto DESeqDataSet para análise, especificando um design experimental 
-#que compara o status de IDH
-ddsSE <- DESeqDataSet(data_de, design = ~ paper_IDH.status)
-
-#Filtragem de Genes: Remove genes com contagens baixas (menos de 10) 
-#para melhorar a confiabilidade da análise de expressão diferencial.
-keep <- rowSums(counts(ddsSE)) >= 10
-
-#Executa a análise de expressão diferencial com a função DESeq
-ddsSE <- ddsSE[keep,]
+# Criação de um DESeqDataSet
+ddsSE <- DESeqDataSetFromMatrix(countData = counts(data_de), 
+                                colData = colData(data_de), 
+                                design = ~ condition) # Altere 'condition' pelo seu fator de interesse
+# Análise de DESeq2
 ddsSE <- DESeq(ddsSE)
+results <- results(ddsSE)
 
-resultsNames(ddsSE)
-#comparação "WT vs Mutant" para o status do IDH, e converte os resultados para um dataframe
-res <- results(ddsSE, name = "paper_IDH.status_WT_vs_Mutant")
-dea <- as.data.frame(res)
-#resume os resultados para obter uma visão geral dos achados estatísticos, 
-#como o número de genes significativamente diferencialmente expressos
-summary(res)
+# Exibição dos resultados
+head(results)
+```
 
+## Processamento de Dados Clínicos com TCGAbiolinks
+Dados clínicos são essenciais para complementar as análises genômicas, permitindo uma compreensão mais aprofundada das características dos pacientes e das amostras analisadas.
 
-#Processamento de Dados Clínicos com TCGAbiolinks
-## dados clinicos
+```{r, TCGAbiolinks}
 
 #buscar dados clínicos do projeto TCGA-PRAD (adenocarcinoma prostático), 
 #especificamente suplementos clínicos, através de GDCquery
 query_clin <- GDCquery(project = "TCGA-PRAD", 
                        data.category = "Clinical",
-                       data.type = "Clinical Supplement", 
+                       data.type = "Clinical Supplement",
                        data.format = "BCR Biotab")
-#Baixa e prepara os dados clínicos
+
 GDCdownload(query_clin)
 clinical.PRAD <- GDCprepare(query_clin)
-names(clinical.PRAD)
 
-head (clinical.PRAD$clinical_drug_PRAD )
-df = as.data.frame(clinical.PRAD$clinical_patient_PRAD)
-View(df)
+# Verificar os dados clínicos disponíveis
+head(clinical.PRAD)
 
 
+```
 
+## Análise Adicional com Dados Clínicos e de Amostra (Afonso- foi revisto para nao "alterar" o html, sem tempo para mais...)
 
-#Instalar os packages
-install.packages("ggplot2")
+```{r, include=FALSE}
+# Checa se o ggplot2 está instalado, senão, instala
+if (!requireNamespace("ggplot2", quietly = TRUE)) {
+  install.packages("ggplot2")
+}
 library(ggplot2)
+```
 
-#Carrega dados de um arquivo de texto em um formato de dataframe .
+Carregamento e limpeza dos dados clínicos e de amostra:
+
+```{r}
+# Carrega dados de um arquivo de texto em um formato de dataframe.
 dados_sample <- read.delim("C:/Users/armin/OneDrive/Ambiente de Trabalho/dataset/data_clinical_sample.txt", header = TRUE, stringsAsFactors = FALSE)
 dados_patient <- read.delim("C:/Users/armin/OneDrive/Ambiente de Trabalho/dataset/data_clinical_patient.txt", header = TRUE, stringsAsFactors = FALSE)
 
-#Criação de novos conjuntos de dados removendo as primeiras 4 linhas dos conjuntos originais 
+# Criação de novos conjuntos de dados removendo as primeiras 4 linhas dos conjuntos originais.
 dados_sample_limpo <- dados_sample[-c(1:4), ]
 dados_patient_limpo <- dados_patient[-c(1:4), ]
 
-#Conversão do conjunto de dados para o tipo de dados numéricos
+# Conversão do conjunto de dados para o tipo de dados numéricos.
 dados_patient_limpo$Overall.Survival..Months. <- as.numeric(as.character(dados_patient_limpo$Overall.Survival..Months.))
 dados_patient_limpo$Diagnosis.Age <- as.numeric(as.character(dados_patient_limpo$Diagnosis.Age))
 dados_sample_limpo$MSI.MANTIS.Score <- as.numeric(dados_sample_limpo$MSI.MANTIS.Score)
 dados_sample_limpo$TMB..nonsynonymous. <- as.numeric(dados_sample_limpo$TMB..nonsynonymous.)
-
-#Visualizar os primeiros registros do conjunto de dados
+```
+Visualização inicial dos dados:
+```{r}
+# Visualizar os primeiros registros do conjunto de dados.
 head(dados_sample_limpo)
 head(dados_patient_limpo)
 
-#Obter informações sobre a estrutura do conjunto de dados
+# Obter informações sobre a estrutura do conjunto de dados.
 str(dados_sample_limpo)
 str(dados_patient_limpo)
 
-#Resumo estatístico do conjunto de dados
+# Resumo estatístico do conjunto de dados.
 summary(dados_sample_limpo)
 summary(dados_patient_limpo)
-
-
-
-
-#Cria um gráfico de dispersão relacionando o MSI e o TMB
+```
+Análise exploratória com gráficos:
+```{r}
+# Cria um gráfico de dispersão relacionando o MSI e o TMB.
 ggplot(dados_sample_limpo, aes(x = MSI.MANTIS.Score, y = TMB..nonsynonymous.)) +
   geom_point() +
-  labs(title = "Relação entre MSI e TMB", x = "Score MSI", y = "Score TMB") +
-  scale_x_continuous(limits = c(0.24, 0.38)) +
-  scale_y_continuous(limits = c(0, 6))
+  labs(title = "Relação entre MSI e TMB", x = "Score MSI", y = "Score TMB")
 
-#Calcular o coeficiente de correlação de Pearson
+# Calcular o coeficiente de correlação de Pearson.
 correlation1 <- cor(dados_sample_limpo$MSI.MANTIS.Score, dados_sample_limpo$TMB..nonsynonymous.)
 
-#Exibir o valor da correlação
+# Exibir o valor da correlação.
 print(correlation1)
-
-#Cria um gráfico de barras da distribuição do status de sobrevivência pela raça
-ggplot(dados_patient_limpo, aes(x = Race.Category, fill = Overall.Survival.Status)) +
-  geom_bar(position = "dodge") +
-  labs(title = "Distribuição do Status de Sobrevivência Geral por Raça",
-       x = "Raça",
-       fill = "Status de Sobrevivência Geral",
-       y = "Número de Pacientes")
-
-#Criar uma tabela de contingência das duas variáveis
-tabela_contingencia1<- table(dados_patient_limpo$Race.Category, dados_patient_limpo$Overall.Survival.Status)
-
-#Realizar o teste qui-quadrado de independência
-resultado_teste1 <- chisq.test(tabela_contingencia1)
-
-#Exibir o resultado do teste
-print(resultado_teste)
-
-
-#Cria um gráfico de barras da distribuição do status de doença livre pela raça
-ggplot(dados_patient_limpo, aes(x = Race.Category, fill = Disease.Free.Status)) +
-  geom_bar(position = "dodge") +
-  labs(title = "Distribuição do Status de Doença Livre por Raça",
-       x = "Raça",
-       y = "Contagem",
-       fill = "Status de Doença Livre")
-
-# Criar uma tabela de contingência das duas variáveis
-tabela_contingencia2 <- table(dados_patient_limpo$Race.Category, dados_patient_limpo$Disease.Free.Status)
-
-# Realizar o teste qui-quadrado de independência
-resultado_teste2 <- chisq.test(tabela_contingencia2)
-
-# Exibir o resultado do teste
-print(resultado_teste2)
-
-
-#Cria um gráfico de dispersão relacionando a idade do diagnóstico com a sobrevivência geral
-ggplot(dados_patient_limpo, aes(x = Diagnosis.Age, y = Overall.Survival..Months.)) +
-  geom_point() +
-  scale_x_continuous(limits = c(40, max(dados_patient_limpo$Diagnosis.Age)), breaks = seq(40, max(dados_patient_limpo$Diagnosis.Age), by = 5)) +
-  scale_y_continuous(limits = c(1, 100), breaks = seq(0, 100, by = 10)) +
-  labs(title = "Idade do Diagnóstico vs. Sobrevivência Geral",
-       x = "Idade do Diagnóstico",
-       y = "Sobrevivência Geral (Meses)")
-
-#Calcular o coeficiente de correlação de Pearson
-correlation2 <- cor(dados_patient_limpo$Diagnosis.Age, dados_patient_limpo$Overall.Survival..Months.)
-
-#Exibir o valor da correlação
-print(correlation2)
-
-#Instalar os packages
-install.packages("survival")
-install.packages("survminer")
-library(survival)
-library(survminer)
-
-# Verificar valores únicos na coluna Overall.Survival.Status
+```
+Análise de sobrevivência e correlação:
+```{r}
+# Verificar valores únicos na coluna Overall.Survival.Status.
 unique(dados_patient_limpo$Overall.Survival.Status)
 
-# Se os valores únicos não forem numéricos ou lógicos, converta-os
-# Por exemplo, se o estado for representado por "LIVING" e "DECEASED":
+# Convertendo estados de sobrevivência para numéricos.
 dados_patient_limpo$Overall.Survival.Status <- ifelse(dados_patient_limpo$Overall.Survival.Status == "LIVING", 0, 1)
 
-# Agora, criar um objeto de sobrevivência
+# Ajustar a curva de sobrevivência de Kaplan-Meier.
+library(survival)
+library(survminer)
 surv_obj <- Surv(dados_patient_limpo$Overall.Survival..Months., dados_patient_limpo$Overall.Survival.Status)
-
-# Ajustar a curva de sobrevivência de Kaplan-Meier
 surv_fit <- survfit(surv_obj ~ 1)
 
-# Traçar a curva de sobrevivência
-ggsurvplot(surv_fit, data = dados_patient_limpo, risk.table = TRUE,
-           xlab = "Tempo (Meses)", ylab = "Probabilidade de Sobrevivência",
-           title = "Curva de Sobrevivência")
+# Traçar a curva de sobrevivência.
+ggsurvplot(surv_fit, data = dados_patient_limpo, risk.table = TRUE, xlab = "Tempo (Meses)", ylab = "Probabilidade de Sobrevivência", title = "Curva de Sobrevivência")
+```
+Análise de regressão linear:
+```{r}
+# Ajustar o modelo de regressão linear.
+modelo <- lm(Diagnosis.Age ~ Overall.Survival..Months., data = dados_patient_limpo)
 
-#Calcular a correlação entre a idade do diagnóstico e a sobrevivência geral
-correlation_test3 <- cor.test(dados_patient_limpo$Diagnosis.Age, dados_patient_limpo$Overall.Survival..Months.)
-
-#Exibir o resultado do teste
-print(correlation_test3)
-
-
-
-# Carregar os dados
-data <- dados_patient_limpo
-
-# Ajustar o modelo de regressão linear
-modelo <- lm(Diagnosis.Age ~ Overall.Survival..Months., data)
-
-# Criar o gráfico de dispersão com a linha de regressão
-plot(data$Overall.Survival..Months., data$Diagnosis.Age, 
-     main = "Gráfico de Regressão", xlab = "Sobrevivência Global (Meses)", ylab = "Idade do Diagnóstico")
-abline(modelo, col = "red")
+# Criar o gráfico de dispersão com a linha de regressão.
+ggplot(dados_patient_limpo, aes(x = Overall.Survival..Months., y = Diagnosis.Age)) +
+  geom_point() +
+  geom_smooth(method = "lm", col = "red") +
+  labs(title = "Gráfico de Regressão", x = "Sobrevivência Global (Meses)", y = "Idade do Diagnóstico")
+```
 
 
-Todos os ficheiros a ser analisados têm em comum um "patient_ID", sendo que o ficheiro "data_clinical_patient" possui metadados relativos aos pacientes, o ficheiro "data_clinical_sample" possui metadados relativos à amostra e o ficheiro "data_mrna_seq_v2_rsem_zscores_ref_all_samples" possui dados normalizados relativos ao sequenciamento de mRNA. Outros ficheiros estão ao nosso dispor para complementar a nossa análise caso seja necessário numa fase posterior.
-
-# Bibliografia
 
